# JSON-parser

./: JSON-parser.md  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
src/: parser.py  type_checker.py
src/helpers/: JSON_cleaner.py
test/: test_add.py  test_main.py  test_parser.py  test_type_checker.py
