[tool.poetry]
name = "json-parser"
version = "0.1.0"
description = "A JSON parser in Python"
authors = ["Jake Walker"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^8.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
